test/testdata/classes/inheritance/static/read_write_property_overridden_by_subclass_read_only_property_assignment_error.lox
class Superclass {
  static set property(_) {}

  static get property() {}
}

class Subclass < Superclass {
  static get property() {}
}

Subclass.property = 2; // error: property 'property' of 'Subclass class' object is read-only
